
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PINE ;
 int SIGKILL ;
 int close (int) ;
 int die (int,char*) ;
 int execve (int ,char**,int *) ;
 int fork () ;
 int kill (int,int ) ;
 int sleep (int) ;
 scalar_t__ system (char*) ;
 int wait (int *) ;

void pinerc() {
 int pid;

 pid = fork();
 if(pid == -1)
  die(1,"fork()");

 if(!pid) {
  char *arg[] = { "pine","-p","/tmp/pinerc", ((void*)0) };
  close(1);
  close(2);

  execve(PINE,arg,((void*)0));
  die(1,"execve()");
 }
 else {
  sleep(1);
  kill(pid,SIGKILL);
  wait(((void*)0));
 }

 if(system("grep -v inbox-path /tmp/pinerc > /tmp/o "
  "&& mv /tmp/o /tmp/pinerc && "
  "echo inbox-path=/tmp/meil >> /tmp/pinerc")<0)
  die(1,"system()");
}
